[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["teofils1 <teodor.marinescu03@stud.fils.upb.ro>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pysimplegui = "^5.0.6"
antlr4-python3-runtime = "^4.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
